--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ body {
 /* navbar */
 .navbar {
   background-color: rgb(20, 107, 189);
-  padding: 10px;
+  /* padding-top:120px; */
+  margin-top: -30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 100%;
+  height: auto;
   gap: 140px;
+  position: fixed;
   /* border: 1px solid white; */
 }
 
@@ -56,6 +60,7 @@ body {
 
 /* hero section start */
 .hero-section {
+  padding-top: 30px;
   margin-top: 30px;
   display: flex;
   flex-direction: row;
@@ -107,48 +112,276 @@ body {
 
 /* about start */
 
-.about-pahamify-section{
-  background-color: white;
+.about-pahamify-section {
+  background-color: rgb(235, 235, 235);
   text-align: center;
   color: black;
-  padding-bottom: 50px;
+  padding-bottom: 200px;
 }
-.about-tittle{
+.about-tittle {
   padding-top: 50px;
   padding-bottom: 10px;
   color: rgba(20, 107, 189, 1);
 }
 
-.about-pahamify{
+.about-pahamify {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 50px;
 }
 
-.about-content{
+.about-content {
   display: flex;
   width: 250px;
   align-self: flex-start;
   gap: 10px;
 }
-.about-content img{
+.about-content img {
   width: 100;
   align-self: flex-start;
   margin-top: 15px;
 }
 
-.about-paragraf{
+.about-paragraf {
   display: flex;
   flex-direction: column;
   text-align: justify;
 }
 
-.about-paragraf p{
+.about-paragraf p {
   margin-top: -15px;
   color: grey;
 }
 /* about end */
 
+/* profile start */
+.profile-section {
+  background-color: rgb(154, 193, 216);
+  padding-bottom: 100px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.profile-details {
+  margin-top: -160px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 1000px;
+  gap: 30px;
+  height: auto;
+  background-color: white;
+  align-self: center;
+  padding: 30px;
+  border-radius: 30px;
+}
+
+.profile-content {
+  width: 250px;
+}
+
+.profile-content img {
+  width: 50px;
+}
+.profile-content h2 {
+  font-size: xx-large;
+}
+.profile-content h5 {
+  margin-top: -20px;
+  font-size: large;
+}
+
+.profile-content p {
+  margin-top: -20px;
+}
+
+.first {
+  color: rgb(0, 174, 255);
+}
+.second {
+  color: rgb(171, 20, 241);
+}
+.third {
+  color: rgb(12, 233, 67);
+}
+.fourth {
+  color: rgb(245, 116, 10);
+}
+
+/* profile end */
+
+/* testimoni start */
+.profil-testimoni {
+  margin-top: 75px;
+  text-align: center;
+  background-color: rgb(154, 193, 216);
+}
+
+.profil-testimoni h2 {
+  color: rgba(20, 107, 189, 1);
+}
+
+.profil-testimoni p {
+  margin-top: -15px;
+  color: rgb(0, 0, 0);
+}
+
+.testimoni-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 15px;
+}
+
+.profil-testimoni-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 300px;
+  height: auto;
+  background-color: white;
+  text-align: start;
+  padding: 20px;
+  padding-bottom: 50px;
+  border-radius: 20px;
+}
+
+.header-testimoni {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  padding-bottom: 30px;
+}
+
+.header-testimoni img {
+  width: 70px;
+  border-radius: 100%;
+  align-self: center;
+}
+.header-testimoni h3 {
+  margin-left: 10px;
+  align-self: center;
+}
+/* testimoni end */
+
+/* teacher section start */
+
+.teacher-section {
+  background-color: rgb(235, 235, 235);
+  margin-top: -20px;
+  padding-bottom: 100px;
+  text-align: center;
+}
+.teacher-section h2 {
+  padding-top: 100px;
+  color: rgba(20, 107, 189, 1);
+}
+.teacher-section h5 {
+  margin-top: -5px;
+  color: rgb(0, 0, 0);
+}
+
+.teacher-details {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+.teacher-container {
+  display: flex;
+  flex-direction: column;
+  width: 375px;
+  height: auto;
+  background-color: white;
+  color: black;
+  text-align: justify;
+  border-radius: 20px;
+  padding-bottom: 50px;
+}
+
+.teacher-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 15px;
+  gap: 10px;
+  background-color: rgb(154, 193, 216);
+  border-radius: 10px;
+}
+.teacher-header img {
+  width: 120px;
+  height: 150px;
+}
+
+.teacher-header .teacher-details-header {
+  color: rgb(9, 2, 109);
+  margin-top: 20px;
+}
+.teacher-header .teacher-details-header h3 {
+  margin-bottom: -20px;
+}
+
+.teacher-header .teacher-details-header h5 {
+  color: rgb(9, 2, 109);
+  margin-top: -20px;
+}
+
+.teacher-body {
+  padding-right: 20px;
+}
+
+/* teacher section end */
+
+/* footer start */
+footer {
+  background-color: rgb(20, 107, 189);
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.pahamify-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  padding-left: 400px;
+  padding-right: 400px;
+  padding-bottom: 100px;
+}
+footer h3{
+  margin-top: 75px ;
+}
+
+footer p {
+  text-align: justify;
+}
+
+.pahamify-footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 90px;
+  align-items: center;
+}
+.pahamify-footer a{
+  color: rgb(193, 214, 5);
+}
+
+.download-pahamify img{
+  width: 150px;
+
+}
+
+.footer-content{
+  align-self: flex-start;
+}
 
 
+/* footer end */
